# desafio-crawler

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
imdb_crawler/: pandas_dataframe.py  run_schedule.py  run_spider.py  schedule_utils.py
imdb_crawler/imdb_crawler/: items.py  itemsloaders.py  middlewares.py  pipelines.py  settings.py
imdb_crawler/imdb_crawler/spiders/: imdb_spider.py
