[tool.poetry]
name = "desafio-crawler"
version = "0.1.0"
description = "Desafio de web scraping da Beemôn"
authors = ["AnaCandidaPereiraQuadros <acandida.quadros@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
Scrapy = "^2.11.0"
psycopg = "^3.1.12"


[tool.poetry.dev-dependencies]
black = "^23.11.0"
pytest = "^7.4"
pytest-cov = "^4.1.0"
isort = "5.12.0"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 88
extend_skip = ['migrations']

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
