[tool.poetry]
name = "desafio-crawler"
version = "0.1.0"
description = "Desafio de web scraping da Beemôn"
authors = ["AnaCandidaPereiraQuadros <acandida.quadros@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
Scrapy = "^2.11.0"
psycopg2-binary = "^2.9.9"
schedule = "^1.2.1"
pandas = "^2.1.3"
sqlalchemy = "^2.0.23"
loguru = "^0.7.2"
scrapy-playwright = "^0.0.33"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
pytest = "^7.4"
pytest-cov = "^4.1.0"
isort = "5.12.0"
ipython = "^8.17.2"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 88
extend_skip = ['migrations']

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
